--- a/index.html
+++ b/index.html
@@ -7,45 +7,81 @@
 </head>
 <body>
   <div class="container">
-    <input id="search" placeholder="Search..." />
+    <input id="search" placeholder="Search..." autocomplete="off" />
     <div class="right-info">
       <span id="clock">--:-- --</span>
       <span class="icon">🔍</span>
     </div>
   </div>
+  <ul id="suggestions" class="suggestions"></ul>
 
   <script>
     const input = document.getElementById('search');
+    const suggestionsBox = document.getElementById('suggestions');
+    const clock = document.getElementById('clock');
+
+    const commands = ['yt', 'gh', 'wiki', 'g'];
+    let selectedIndex = -1;
+
     input.focus();
 
-    // Handle Enter
-    input.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') {
-        window.electronAPI.search(input.value);
-        input.value = '';
-      }
-    });
-
-    // Escape to close
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') {
-        window.electronAPI.hideWindow();
-      }
-    });
-
-    // Clock updater
-    const clock = document.getElementById('clock');
     const updateClock = () => {
       const now = new Date();
       let hours = now.getHours();
       const minutes = now.getMinutes().toString().padStart(2, '0');
       const ampm = hours >= 12 ? 'PM' : 'AM';
-      hours = hours % 12;
-      hours = hours ? hours : 12;
+      hours = hours % 12 || 12;
       clock.textContent = `${hours}:${minutes} ${ampm}`;
     };
     setInterval(updateClock, 1000);
     updateClock();
+
+    input.addEventListener('input', () => {
+      const text = input.value.trim().toLowerCase();
+      const keyword = text.split(' ')[0];
+      const matches = commands.filter(cmd => cmd.startsWith(keyword));
+      selectedIndex = -1;
+      renderSuggestions(matches);
+    });
+
+    input.addEventListener('keydown', (e) => {
+      const items = suggestionsBox.querySelectorAll('li');
+
+      if (e.key === 'ArrowDown') {
+        selectedIndex = (selectedIndex + 1) % items.length;
+        highlightSelected(items);
+      } else if (e.key === 'ArrowUp') {
+        selectedIndex = (selectedIndex - 1 + items.length) % items.length;
+        highlightSelected(items);
+      } else if (e.key === 'Enter') {
+        const finalValue = selectedIndex >= 0
+          ? items[selectedIndex].textContent + ' ' + input.value.split(' ').slice(1).join(' ')
+          : input.value;
+        window.electronAPI.search(finalValue.trim());
+        input.value = '';
+        suggestionsBox.innerHTML = '';
+        selectedIndex = -1;
+      } else if (e.key === 'Escape') {
+        window.electronAPI.hideWindow();
+      }
+    });
+
+    function renderSuggestions(matches) {
+      suggestionsBox.innerHTML = matches.map(m => `<li>${m}</li>`).join('');
+      const suggestionHeight = 40;
+      const baseHeight = 60;
+      const maxVisible = 5;
+      suggestionsBox.style.overflowY = matches.length > maxVisible ? 'auto' : 'hidden';
+
+      const totalHeight = baseHeight + Math.min(matches.length, maxVisible) * suggestionHeight;
+      window.electronAPI.resizeWindow(totalHeight);
+    }
+
+    function highlightSelected(items) {
+      items.forEach((item, i) => {
+        item.classList.toggle('selected', i === selectedIndex);
+      });
+    }
   </script>
 </body>
 </html>
