--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
       }
     });
 
+    window.electronAPI.onReset(() => {
+      input.value = '';
+      suggestionsBox.innerHTML = '';
+      selectedIndex = -1;
+    });
+
     function renderSuggestions(matches) {
+      suggestionsBox.scrollTop = 0; // reset scroll to top
       suggestionsBox.innerHTML = matches.map(m => `<li>${m}</li>`).join('');
       const suggestionHeight = 40;
       const baseHeight = 60;
