--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 </head>
 <body>
   <div class="container">
-    <input id="search" placeholder="Search..." autocomplete="off" />
+    <div class="input-wrapper">
+      <input id="search" placeholder="Search..." autocomplete="off" />
+      <div id="ghost-suggestion" class="ghost"></div>
+    </div>
     <div class="right-info">
       <span id="clock">--:-- --</span>
       <span class="icon">🔍</span>
     </div>
   </div>
-  <ul id="suggestions" class="suggestions"></ul>
 
   <script>
     const input = document.getElementById('search');
-    const suggestionsBox = document.getElementById('suggestions');
+    const ghost = document.getElementById('ghost-suggestion');
     const clock = document.getElementById('clock');
 
     const commands = ['yt', 'gh', 'wiki', 'g'];
@@ -37,58 +39,43 @@
     updateClock();
 
     input.addEventListener('input', () => {
-      const text = input.value.trim().toLowerCase();
-      const keyword = text.split(' ')[0];
-      const matches = commands.filter(cmd => cmd.startsWith(keyword));
-      selectedIndex = -1;
-      renderSuggestions(matches);
+      const rawText = input.value;
+      const keyword = rawText.trim().split(/\s+/)[0].toLowerCase();
+      const match = commands.find(cmd => cmd.startsWith(keyword));
+
+      if (match && keyword !== match) {
+        // Show typed part + suggestion
+        ghost.textContent = rawText + match.slice(keyword.length);
+      } else {
+        ghost.textContent = '';
+      }
     });
 
     input.addEventListener('keydown', (e) => {
-      const items = suggestionsBox.querySelectorAll('li');
-
-      if (e.key === 'ArrowDown') {
-        selectedIndex = (selectedIndex + 1) % items.length;
-        highlightSelected(items);
-      } else if (e.key === 'ArrowUp') {
-        selectedIndex = (selectedIndex - 1 + items.length) % items.length;
-        highlightSelected(items);
-      } else if (e.key === 'Enter') {
-        const finalValue = selectedIndex >= 0
-          ? items[selectedIndex].textContent + ' ' + input.value.split(' ').slice(1).join(' ') 
-          : input.value;
-        window.electronAPI.search(finalValue.trim());
+      if (e.key === 'Enter') {
+        const finalValue = input.value.trim();
+        window.electronAPI.search(finalValue);
         input.value = '';
-        suggestionsBox.innerHTML = '';
+        ghost.textContent = '';
         selectedIndex = -1;
       } else if (e.key === 'Escape') {
         window.electronAPI.hideWindow();
+      } else if (e.key === 'Tab') {
+        e.preventDefault();
+        if (ghost.textContent) {
+          const words = input.value.split(/\s+/);
+          words[0] = ghost.textContent;
+          input.value = words.join(' ') + ' ';
+          ghost.textContent = '';
+        }
       }
     });
 
     window.electronAPI.onReset(() => {
       input.value = '';
-      suggestionsBox.innerHTML = '';
+      ghost.textContent = '';
       selectedIndex = -1;
     });
-
-    function renderSuggestions(matches) {
-      suggestionsBox.scrollTop = 0; // reset scroll to top
-      suggestionsBox.innerHTML = matches.map(m => `<li>${m}</li>`).join('');
-      const suggestionHeight = 40;
-      const baseHeight = 60;
-      const maxVisible = 5;
-      suggestionsBox.style.overflowY = matches.length > maxVisible ? 'auto' : 'hidden';
-
-      const totalHeight = baseHeight + Math.min(matches.length, maxVisible) * suggestionHeight;
-      window.electronAPI.resizeWindow(totalHeight);
-    }
-
-    function highlightSelected(items) {
-      items.forEach((item, i) => {
-        item.classList.toggle('selected', i === selectedIndex);
-      });
-    }
   </script>
 </body>
 </html>
