--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
       const keyword = rawText.trim().split(/\s+/)[0].toLowerCase();
       const match = commands.find(cmd => cmd.startsWith(keyword));
 
-      if (match && keyword !== match) {
-        // Show typed part + suggestion
-        ghost.textContent = rawText + match.slice(keyword.length);
-      } else {
-        ghost.textContent = '';
-      }
+    if (!rawText.trim()) {
+      ghost.textContent = '';
+    } else if (match && keyword !== match) {
+      ghost.textContent = rawText + match.slice(keyword.length);
+    } else {
+      ghost.textContent = '';
+    }
     });
 
     input.addEventListener('keydown', (e) => {
