--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
 
     input.addEventListener('input', () => {
       const rawText = input.value;
-      const parts = rawText.split(/\s+/); // 🔥 no trim here
-      const keyword = parts[0].toLowerCase();
 
-      // If user typed space, or input is empty → clear ghost
-      if (!rawText || rawText.endsWith(' ')) {
+      // 🧠 if input is empty or contains a space anywhere → don't show ghost
+      if (!rawText || rawText.includes(' ')) {
         ghost.textContent = '';
         return;
       }
 
+      const keyword = rawText.toLowerCase();
       const match = commands.find(cmd => cmd.startsWith(keyword));
 
       if (match && keyword !== match) {
@@ -61,6 +60,7 @@
         ghost.textContent = '';
       }
     });
+
 
     input.addEventListener('keydown', (e) => {
       if (e.key === 'Enter') {
