--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Spotlight Launcher</title>
+  <title>Win Search</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
