--- a/assets/index.html
+++ b/assets/index.html
@@ -47,29 +47,25 @@
     updateClock();
 
     input.addEventListener('input', () => {
-      const rawText = input.value;
+      const rawText = input.value.trim();
+      const words = rawText.split(/\s+/);
+      const keyword = words[0].toLowerCase();
 
-      if (!rawText || rawText.includes(' ')) {
-        ghost.textContent = '';
-        renderSuggestions([]);
-        return;
-      }
-
-      const keyword = rawText.toLowerCase();
-
+      // Update ghost suggestion
       const match = commands.find(cmd => cmd.command.startsWith(keyword));
-      if (match && keyword !== match.command) {
+      if (match && keyword !== match.command && words.length === 1) {
         ghost.textContent = rawText + match.command.slice(keyword.length);
       } else {
         ghost.textContent = '';
       }
 
+      // Always show dropdown suggestions based on first word
       const matches = commands
         .filter(cmd => cmd.command.startsWith(keyword))
         .slice(0, 2);
+
       renderSuggestions(matches);
     });
-
 
     input.addEventListener('keydown', (e) => {
       if (e.key === 'Enter') {
@@ -98,7 +94,7 @@
       }
     });
 
-    function renderSuggestions(matches) {
+    const renderSuggestions = (matches) => {
       const limited = matches.slice(0, 2);
       const container = document.querySelector('.container');
 
