--- a/assets/index.html
+++ b/assets/index.html
@@ -91,18 +91,20 @@
       if (e.key === 'Enter') {
         const finalValue = input.value.trim();
 
+        // Reset everything BEFORE triggering actions
+        input.value = '';
+        ghost.textContent = '';
+        renderSuggestions([]);
+        selectedIndex = -1;
+
         if (!finalValue) {
           window.electronAPI.hideWindow();
         } else {
           window.electronAPI.search(finalValue);
         }
-
-        input.value = '';
-        ghost.textContent = '';
-        renderSuggestions([]);
-        selectedIndex = -1;
       } else if (e.key === 'Escape') {
         window.electronAPI.hideWindow();
+        renderSuggestions([]);
       } else if (e.key === 'Tab') {
         e.preventDefault();
         if (ghost.textContent) {
@@ -114,14 +116,17 @@
       }
     });
 
+
     const renderSuggestions = (matches) => {
       const limited = matches.slice(0, 2);
       const container = document.querySelector('.container');
+      const baseHeight = 60;
+      const itemHeight = 50;
 
       suggestionsList.innerHTML = '';
 
       if (limited.length > 0) {
-        suggestionsList.innerHTML = matches.map((cmd, idx) => `
+        suggestionsList.innerHTML = limited.map((cmd, idx) => `
           <li class="suggestion-item" data-index="${idx}">
             <div class="suggestion-left">
               <img src="${cmd.icon || 'google.png'}" alt="icon">
@@ -136,8 +141,6 @@
         container.classList.remove('rounded');
         container.classList.add('with-suggestions');
 
-        const baseHeight = 60; // input bar height
-        const itemHeight = 50; // per suggestion
         const totalHeight = baseHeight + limited.length * itemHeight;
         window.electronAPI.resizeWindow(totalHeight);
 
@@ -145,17 +148,16 @@
         container.classList.remove('with-suggestions');
         container.classList.add('rounded');
 
-        const baseHeight = 60;
-        window.electronAPI.resizeWindow(baseHeight);
+        window.electronAPI.resizeWindow(baseHeight); // 👈 always force reset
       }
-    }
+    };
 
 
     window.electronAPI.onReset(() => {
       input.value = '';
       ghost.textContent = '';
-      renderSuggestions([]);
       selectedIndex = -1;
+      renderSuggestions([]);
     });
 
     window.addEventListener('blur', () => {
