Rename project name

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Win Search</title>
+  <title>Meow Twist</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
